--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Advent_Of_Code_2020"
+name = "advent_of_code_2020"
 version = "0.1.0"
 authors = ["Malachy Gilchrist <malachygilchrist@gmail.com>"]
 edition = "2018"
